# demand-forecasting-model

./: .gitignore  01_eda.ipynb  02_features.ipynb  ForecastPredictModel.html  ForecastPredictModel.qmd  LICENSE  README.html  README.md  RESUMEN_EJECUTIVO.md  forecast_predict_model.ipynb  pyproject.toml  resumen_ejecutivo.qmd
artifacts/: RESUMEN_EJECUTIVO.html
data/predictions/: predictions.csv
models/: ridge_baseline.joblib
notebooks/: 01_eda.ipynb  03_train.ipynb  forecast_predict_model.ipynb
src/: __init__.py  inference.py  prep.py  train.py
src/inference/: Dockerfile  __main__.py  inference.py  requirements.txt  test_inference.py
src/preprocessing/: Dockerfile  __main__.py  prep.py  requirements.txt
src/preprocessing/test/: test_prep.py
src/training/: Dockerfile  __main__.py  requirements.txt  train.py
src/training/test/: test_train.py
