[project]
name = "demand-forecasting-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "pylint>=4.0.4",
    "pyyaml>=6.0.3",
    "ruff>=0.15.0",
    "scikit-learn>=1.8.0",
    "xgboost>=3.1.3",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "D",    # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"